--- a/src/app/components/manage-categories/manage-categories.html
+++ b/src/app/components/manage-categories/manage-categories.html
@@ -33,7 +33,7 @@
     }
 
     <!-- Categories Table -->
-    <div class="categories-section" *ngIf="filteredCategories$ | async as categories">
+    <div class="categories-section" *ngIf="categories$ | async as categories">
         @if(categories.length > 0){
         <table class="categories-table">
             <thead>
