--- a/src/app/components/register/register.html
+++ b/src/app/components/register/register.html
@@ -27,7 +27,7 @@
                 <select id="role" formControlName="role">
                     <option value="User">User</option>
                     <option value="Admin">Admin</option>
-                    <option value="Agent">Agent</option>
+                    <!-- <option value="Agent">Agent</option> -->
                 </select>
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
